feat: integrate new api spec, updated timeout and info view
