# src/openapi/model__fetch_post_200_response.go
@@ -1,0 +1,246 @@
+/*
+roverd REST API
+
+API exposed from each rover to allow process, service, source and file management
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the FetchPost200Response type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &FetchPost200Response{}
+
+// FetchPost200Response struct for FetchPost200Response
+type FetchPost200Response struct {
+	// The name of the service
+	Name string `json:"name"`
+	// The version of the service
+	Version string `json:"version"`
+	// The author of the service
+	Author string `json:"author"`
+	// Whether the pipeline was invalidated by this service upload
+	InvalidatedPipeline bool `json:"invalidated_pipeline"`
+}
+
+type _FetchPost200Response FetchPost200Response
+
+// NewFetchPost200Response instantiates a new FetchPost200Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewFetchPost200Response(name string, version string, author string, invalidatedPipeline bool) *FetchPost200Response {
+	this := FetchPost200Response{}
+	this.Name = name
+	this.Version = version
+	this.Author = author
+	this.InvalidatedPipeline = invalidatedPipeline
+	return &this
+}
+
+// NewFetchPost200ResponseWithDefaults instantiates a new FetchPost200Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewFetchPost200ResponseWithDefaults() *FetchPost200Response {
+	this := FetchPost200Response{}
+	return &this
+}
+
+// GetName returns the Name field value
+func (o *FetchPost200Response) GetName() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Name
+}
+
+// GetNameOk returns a tuple with the Name field value
+// and a boolean to check if the value has been set.
+func (o *FetchPost200Response) GetNameOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Name, true
+}
+
+// SetName sets field value
+func (o *FetchPost200Response) SetName(v string) {
+	o.Name = v
+}
+
+// GetVersion returns the Version field value
+func (o *FetchPost200Response) GetVersion() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Version
+}
+
+// GetVersionOk returns a tuple with the Version field value
+// and a boolean to check if the value has been set.
+func (o *FetchPost200Response) GetVersionOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Version, true
+}
+
+// SetVersion sets field value
+func (o *FetchPost200Response) SetVersion(v string) {
+	o.Version = v
+}
+
+// GetAuthor returns the Author field value
+func (o *FetchPost200Response) GetAuthor() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Author
+}
+
+// GetAuthorOk returns a tuple with the Author field value
+// and a boolean to check if the value has been set.
+func (o *FetchPost200Response) GetAuthorOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Author, true
+}
+
+// SetAuthor sets field value
+func (o *FetchPost200Response) SetAuthor(v string) {
+	o.Author = v
+}
+
+// GetInvalidatedPipeline returns the InvalidatedPipeline field value
+func (o *FetchPost200Response) GetInvalidatedPipeline() bool {
+	if o == nil {
+		var ret bool
+		return ret
+	}
+
+	return o.InvalidatedPipeline
+}
+
+// GetInvalidatedPipelineOk returns a tuple with the InvalidatedPipeline field value
+// and a boolean to check if the value has been set.
+func (o *FetchPost200Response) GetInvalidatedPipelineOk() (*bool, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.InvalidatedPipeline, true
+}
+
+// SetInvalidatedPipeline sets field value
+func (o *FetchPost200Response) SetInvalidatedPipeline(v bool) {
+	o.InvalidatedPipeline = v
+}
+
+func (o FetchPost200Response) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o FetchPost200Response) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["name"] = o.Name
+	toSerialize["version"] = o.Version
+	toSerialize["author"] = o.Author
+	toSerialize["invalidated_pipeline"] = o.InvalidatedPipeline
+	return toSerialize, nil
+}
+
+func (o *FetchPost200Response) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"name",
+		"version",
+		"author",
+		"invalidated_pipeline",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varFetchPost200Response := _FetchPost200Response{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varFetchPost200Response)
+
+	if err != nil {
+		return err
+	}
+
+	*o = FetchPost200Response(varFetchPost200Response)
+
+	return err
+}
+
+type NullableFetchPost200Response struct {
+	value *FetchPost200Response
+	isSet bool
+}
+
+func (v NullableFetchPost200Response) Get() *FetchPost200Response {
+	return v.value
+}
+
+func (v *NullableFetchPost200Response) Set(val *FetchPost200Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableFetchPost200Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableFetchPost200Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableFetchPost200Response(val *FetchPost200Response) *NullableFetchPost200Response {
+	return &NullableFetchPost200Response{value: val, isSet: true}
+}
+
+func (v NullableFetchPost200Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableFetchPost200Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
