# src/openapi/model__fetch_post_request.go
@@ -1,0 +1,159 @@
+/*
+roverd REST API
+
+API exposed from each rover to allow process, service, source and file management
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the FetchPostRequest type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &FetchPostRequest{}
+
+// FetchPostRequest struct for FetchPostRequest
+type FetchPostRequest struct {
+	// Download URL of the service to be downloaded, must include scheme
+	Url string `json:"url"`
+}
+
+type _FetchPostRequest FetchPostRequest
+
+// NewFetchPostRequest instantiates a new FetchPostRequest object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewFetchPostRequest(url string) *FetchPostRequest {
+	this := FetchPostRequest{}
+	this.Url = url
+	return &this
+}
+
+// NewFetchPostRequestWithDefaults instantiates a new FetchPostRequest object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewFetchPostRequestWithDefaults() *FetchPostRequest {
+	this := FetchPostRequest{}
+	return &this
+}
+
+// GetUrl returns the Url field value
+func (o *FetchPostRequest) GetUrl() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Url
+}
+
+// GetUrlOk returns a tuple with the Url field value
+// and a boolean to check if the value has been set.
+func (o *FetchPostRequest) GetUrlOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Url, true
+}
+
+// SetUrl sets field value
+func (o *FetchPostRequest) SetUrl(v string) {
+	o.Url = v
+}
+
+func (o FetchPostRequest) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o FetchPostRequest) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["url"] = o.Url
+	return toSerialize, nil
+}
+
+func (o *FetchPostRequest) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"url",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varFetchPostRequest := _FetchPostRequest{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varFetchPostRequest)
+
+	if err != nil {
+		return err
+	}
+
+	*o = FetchPostRequest(varFetchPostRequest)
+
+	return err
+}
+
+type NullableFetchPostRequest struct {
+	value *FetchPostRequest
+	isSet bool
+}
+
+func (v NullableFetchPostRequest) Get() *FetchPostRequest {
+	return v.value
+}
+
+func (v *NullableFetchPostRequest) Set(val *FetchPostRequest) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableFetchPostRequest) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableFetchPostRequest) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableFetchPostRequest(val *FetchPostRequest) *NullableFetchPostRequest {
+	return &NullableFetchPostRequest{value: val, isSet: true}
+}
+
+func (v NullableFetchPostRequest) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableFetchPostRequest) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
